Test cordapp-cpk while running on Java 11.