@@ -1,4 +1,5 @@
 import org.apache.tools.ant.filters.ReplaceTokens
+import static org.gradle.jvm.toolchain.JavaLanguageVersion.of
 
 plugins {
     id 'org.jetbrains.kotlin.jvm'
@@ -11,7 +12,7 @@ ext {
     test_quasar_utils_version = '5.0.13'
     test_persistence_api_version = '2.2'
     test_hibernate_version = '5.4.3.Final'
-    test_kotlin_version = '1.4.31'
+    test_kotlin_version = '1.4.32'
     corda_guava_version = '20.0'
 }
 
@@ -90,7 +91,23 @@ processTestResources {
             'corda_guava_version': corda_guava_version,
             'osgi_version': osgi_version,
             'kotlin_version': test_kotlin_version,
+            'java_home': System.getProperty('java.home'),
             'bnd_version': bnd_version
         ])
     }
+}
+
+tasks.withType(Test).configureEach {
+    javaLauncher = javaToolchains.launcherFor {
+        languageVersion = of(11)
+    }
+
+    // Resolve warnings about "illegal reflective access" that
+    // are generated by Gradle's own Groovy library.
+    jvmArgs '--add-opens', 'java.base/java.io=ALL-UNNAMED',
+            '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
+            '--add-opens', 'java.base/java.util=ALL-UNNAMED',
+            '--add-opens', 'java.base/java.util.jar=ALL-UNNAMED',
+            '--add-opens', 'java.base/java.util.zip=ALL-UNNAMED',
+            '--illegal-access=warn'
 }
